# hawk-scope

./: .gitignore  README.md  prek.toml  pyproject.toml
src/hawk_scope/: cli.py  compat.py  db.py  db_aiosqlite.py  db_sqlalchemy.py  db_sqlmodel.py  indexer.py  scope.py  settings.py  slicer.py  test.py  util.py  web.py  webdataset-animation.html
tests/: conftest.py  test_db.py  test_scope.py  test_slicer.py  test_util.py
