[project]
name = "hawk-scope"
version = "0.1.0"
description = "Server to slice subsets out of a larger webdataset collection"
readme = "README.md"
authors = [
    { name = "Jan Harkes", email = "jaharkes@cs.cmu.edu" }
]
license = "GPL-2.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "niquests>=3.19.1",
    "rich>=15.0.0",
    "starlette>=1.3.1",
    "tqdm>=4.67.3",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

## different (untested) database adapters
# "asyncpg>=0.31.0",
# "sqlalchemy>=2.0.51",
# "sqlmodel>=0.0.38",

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[project.scripts]
hawk-scope = "hawk_scope.cli:app"

[project.optional-dependencies]
dbtest = [
    "sqlmodel>=0.0.39",
]

[tool.ruff]
target-version = "py310"
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"
