[project]
name = "hawk-scope"
version = "0.1.0"
description = "Server to slice subsets out of a larger webdataset collection"
readme = "README.md"
authors = [
    { name = "Jan Harkes", email = "jaharkes@cs.cmu.edu" }
]
license = "GPL-2.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.14.1",
    "braceexpand>=0.1.7",
    "niquests>=3.19.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

## different (untested) database adapters
# "asyncpg>=0.31.0",

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[project.scripts]
hawk-scope = "hawk_scope.cli:app"

[tool.ruff]
target-version = "py310"
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"
